# hackgt-proj

./: README.md  package.json  pnpm-lock.yaml
app/: globals.css
app/processing/: page.tsx
app/review/: page.tsx
backend/: .env.example  AGENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup-dev.sh  start.sh
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  config.py  container.py  main.py  tasks.py
backend/app/api/v1/: __init__.py  auth.py  claims.py  health.py  routes_claims.py  routes_files.py  routes_health.py  routes_jobs.py  routes_providers.py  routes_stream.py  routes_users.py  routes_webhooks.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py  jwt_validator.py  password.py
backend/app/domain/: __init__.py
backend/app/domain/dto/: __init__.py  problem.py  requests.py  responses.py
backend/app/domain/models/: __init__.py  core.py
backend/app/middleware/: __init__.py  problem_handler.py  request_id.py
backend/app/models/: __init__.py  claim.py  user.py
backend/app/repositories/: __init__.py  claims_repo.py  files_repo.py  jobs_repo.py  providers_repo.py  users_repo.py  webhooks_repo.py
backend/app/schemas/: __init__.py  claim.py  user.py
backend/app/services/: __init__.py  ai_drafting_service.py  ai_service.py  claim_service.py  email_service.py  file_service.py  idempotency_service.py  local_file_service.py  ocr_service.py  pdf_service.py  storage_service.py  submission_service.py  user_service.py  virus_scan_service.py
backend/app/workers/: __init__.py  runner.py
backend/tests/: conftest.py  test_auth.py  test_auth_and_claims.py  test_claims.py  test_health.py
frontend/app/: layout.tsx  page.tsx
frontend/app/upload/: page.tsx
